chore: Oppdater bibliotek. Inputvalidering