@@ -1,14 +1,13 @@
 package no.nav.foreldrepenger.tilbakekreving.web.app.konfig;
 
 import static java.util.Arrays.asList;
-import static java.util.Collections.emptyList;
 import static java.util.Collections.singletonList;
-import static org.assertj.core.api.Fail.fail;
+import static org.assertj.core.api.Assertions.assertThat;
 
 import java.lang.annotation.Annotation;
 import java.lang.reflect.AnnotatedParameterizedType;
+import java.lang.reflect.AnnotatedType;
 import java.lang.reflect.Field;
-import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
 import java.lang.reflect.ParameterizedType;
 import java.lang.reflect.Type;
@@ -16,6 +15,7 @@ import java.math.BigDecimal;
 import java.net.URISyntaxException;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
@@ -30,8 +30,7 @@ import java.util.Set;
 import java.util.TreeSet;
 import java.util.UUID;
 import java.util.stream.Collectors;
-
-import com.fasterxml.jackson.annotation.JsonAlias;
+import java.util.stream.Stream;
 
 import jakarta.persistence.Entity;
 import jakarta.persistence.MappedSuperclass;
@@ -45,26 +44,28 @@ import jakarta.validation.constraints.NotNull;
 import jakarta.validation.constraints.Null;
 import jakarta.validation.constraints.Pattern;
 import jakarta.validation.constraints.Size;
-
+import jakarta.ws.rs.DefaultValue;
+import jakarta.ws.rs.FormParam;
 import jakarta.ws.rs.PathParam;
-import jakarta.ws.rs.core.Context;
+import jakarta.ws.rs.QueryParam;
 
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.MethodSource;
 
+import com.fasterxml.jackson.annotation.JsonAlias;
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonTypeName;
 import com.fasterxml.jackson.annotation.JsonValue;
 
-import no.nav.foreldrepenger.tilbakekreving.behandlingslager.kodeverk.IgnoreKodeverk;
 import no.nav.foreldrepenger.tilbakekreving.behandlingslager.kodeverk.Kodeverdi;
 import no.nav.foreldrepenger.tilbakekreving.behandlingslager.kodeverk.ValidKodeverk;
 import no.nav.foreldrepenger.tilbakekreving.dbstoette.CdiDbAwareTest;
 import no.nav.foreldrepenger.tilbakekreving.domene.typer.PersonIdent;
 import no.nav.foreldrepenger.tilbakekreving.web.app.IndexClasses;
+import no.nav.vedtak.util.Fritekst;
 
 @CdiDbAwareTest
 class RestApiInputValideringDtoTest extends RestApiTester {
@@ -89,49 +90,26 @@ class RestApiInputValideringDtoTest extends RestApiTester {
         validerRekursivt(validerteKlasser, dto, null);
     }
 
-    private static final Set<Class<? extends Object>> ALLOWED_ENUM_ANNOTATIONS = Set.of(JsonAlias.class, JsonProperty.class, JsonValue.class, JsonIgnore.class,
-            Valid.class, Null.class, NotNull.class, PathParam.class);
+    private static final Set<Class<? extends Object>> ALLOWED_ENUM_ANNOTATIONS = Set.of(JsonProperty.class,
+        JsonValue.class, JsonIgnore.class, JsonAlias.class, Valid.class, Null.class, NotNull.class, ValidKodeverk.class, DefaultValue.class, FormParam.class, QueryParam.class,
+        PathParam.class);
 
     @SuppressWarnings("rawtypes")
-    private static final Map<Class, List<List<Class<? extends Annotation>>>> UNNTATT_FRA_VALIDERING = new HashMap<Class, List<List<Class<? extends Annotation>>>>() {
-        {
-
-            put(PersonIdent.class, singletonList(emptyList()));
-
-            put(boolean.class, singletonList(emptyList()));
-            put(Boolean.class, singletonList(emptyList()));
-
-            // LocalDate og LocalDateTime har egne deserializers
-            put(LocalDate.class, singletonList(emptyList()));
-            put(LocalDateTime.class, singletonList(emptyList()));
-
-            // Enforces av UUID selv
-            put(UUID.class, singletonList(emptyList()));
-        }
-    };
+    private static final Set<Class> UNNTATT_FRA_VALIDERING = Set.of(PersonIdent.class, boolean.class, Boolean.class, UUID.class,
+        LocalDate.class, LocalDateTime.class);
 
     @SuppressWarnings("rawtypes")
-    private static final Map<Class, List<List<Class<? extends Annotation>>>> VALIDERINGSALTERNATIVER = new HashMap<Class, List<List<Class<? extends Annotation>>>>() {
+    private static final Map<Class, List<List<Class<? extends Annotation>>>> VALIDERINGSALTERNATIVER = new HashMap<>() {
         {
-            put(String.class, asList(
-                    asList(Pattern.class, Size.class),
-                    asList(Pattern.class),
-                    singletonList(Digits.class)));
-            put(Long.class, asList(
-                    asList(Min.class, Max.class),
-                    asList(Digits.class)));
-            put(long.class, asList(
-                    asList(Min.class, Max.class),
-                    asList(Digits.class)));
-            put(Integer.class, singletonList(
-                    asList(Min.class, Max.class)));
-            put(int.class, singletonList(
-                    asList(Min.class, Max.class)));
-            put(BigDecimal.class, asList(
-                    asList(Min.class, Max.class, Digits.class),
-                    asList(DecimalMin.class, DecimalMax.class, Digits.class)));
+            put(String.class, asList(asList(Pattern.class, Size.class), List.of(Pattern.class), List.of(Digits.class),
+                List.of(Fritekst.class, Size.class), List.of(Fritekst.class)));
+            put(Long.class, asList(asList(Min.class, Max.class), List.of(Digits.class)));
+            put(long.class, asList(asList(Min.class, Max.class), List.of(Digits.class)));
+            put(Integer.class, singletonList(asList(Min.class, Max.class)));
+            put(int.class, singletonList(asList(Min.class, Max.class)));
+            put(BigDecimal.class, asList(asList(Min.class, Max.class), asList(DecimalMin.class, DecimalMax.class), List.of(Digits.class)));
 
-            putAll(UNNTATT_FRA_VALIDERING);
+            UNNTATT_FRA_VALIDERING.forEach(k -> put(k, List.of(List.of())));
         }
     };
 
@@ -139,18 +117,9 @@ class RestApiInputValideringDtoTest extends RestApiTester {
         var type = field.getType();
         if (field.getType().isEnum()) {
             return Collections.singletonList(Collections.singletonList(Valid.class));
-        } else if (Collection.class.isAssignableFrom(type) || Map.class.isAssignableFrom(type)) {
-            if (brukerGenerics(field)) {
-                var args = ((ParameterizedType) field.getGenericType()).getActualTypeArguments();
-                if (Arrays.stream(args).allMatch(UNNTATT_FRA_VALIDERING::containsKey)) {
-                    return Collections.singletonList(List.of(Size.class));
-                } else if (args.length == 1 && erKodeverk(args)) {
-                    return Collections.singletonList(List.of(Valid.class, Size.class));
-                }
-
-            }
-            return singletonList(List.of(Valid.class, Size.class));
-
+        }
+        if (Properties.class.isAssignableFrom(type) ) {
+            return List.of(List.of(Size.class));
         }
         return VALIDERINGSALTERNATIVER.get(type);
     }
@@ -161,20 +130,19 @@ class RestApiInputValideringDtoTest extends RestApiTester {
 
     private static Set<Class<?>> finnAlleDtoTyper() {
         Set<Class<?>> parametre = new TreeSet<>(Comparator.comparing(Class::getName));
-        for (Method method : finnAlleRestMetoder()) {
+        for (var method : finnAlleRestMetoder()) {
             parametre.addAll(List.of(method.getParameterTypes()));
-            for (Type type : method.getGenericParameterTypes()) {
-                if (type instanceof ParameterizedType) {
-                    ParameterizedType genericTypes = (ParameterizedType) type;
-                    for (Type gen : genericTypes.getActualTypeArguments()) {
+            for (var type : method.getGenericParameterTypes()) {
+                if (type instanceof ParameterizedType genericTypes) {
+                    for (var gen : genericTypes.getActualTypeArguments()) {
                         parametre.add((Class<?>) gen);
                     }
                 }
             }
         }
         Set<Class<?>> filtreteParametre = new TreeSet<>(Comparator.comparing(Class::getName));
-        for (Class<?> klasse : parametre) {
-            if (klasse.getName().startsWith("java") || klasse.isInterface() ) {
+        for (var klasse : parametre) {
+            if (klasse.getName().startsWith("java") || klasse.isInterface()) {
                 // ikke sjekk nedover i innebygde klasser, det skal brukes annoteringer på tidligere tidspunkt
                 continue;
             }
@@ -183,10 +151,9 @@ class RestApiInputValideringDtoTest extends RestApiTester {
         return filtreteParametre;
     }
 
-    private static void validerRekursivt(Set<Class<?>> besøkteKlasser, Class<?> klasse, Class<?> forrigeKlasse) throws URISyntaxException {
-        if (klasse.isEnum()) {
-            return; //enum er OK
-        }
+    private static void validerRekursivt(Set<Class<?>> besøkteKlasser,
+                                         Class<?> klasse,
+                                         Class<?> forrigeKlasse) throws URISyntaxException {
         if (erKodeverk(klasse)) {
             return;
         }
@@ -202,35 +169,44 @@ class RestApiInputValideringDtoTest extends RestApiTester {
         }
 
         besøkteKlasser.add(klasse);
-        if (klasse.getAnnotation(Entity.class) != null || klasse.getAnnotation(MappedSuperclass.class) != null) {
-            fail("Klassen " + klasse + " er en entitet, kan ikke brukes som DTO. Brukes i " + forrigeKlasse);
-        }
+        assertThat(klasse.getAnnotation(Entity.class))
+            .withFailMessage("Klassen " + klasse + " er en entitet, kan ikke brukes som DTO. Brukes i " + forrigeKlasse)
+            .isNull();
+        assertThat(klasse.getAnnotation(MappedSuperclass.class))
+            .withFailMessage("Klassen " + klasse + " er en entitet, kan ikke brukes som DTO. Brukes i " + forrigeKlasse)
+            .isNull();
 
         var klasseLocation = codeSource.getLocation();
-        for (var subklasse : IndexClasses.getIndexFor(klasseLocation.toURI()).getSubClassesWithAnnotation(klasse, JsonTypeName.class)) {
+        for (var subklasse : IndexClasses.getIndexFor(klasseLocation.toURI())
+            .getSubClassesWithAnnotation(klasse, JsonTypeName.class)) {
+            validerRekursivt(besøkteKlasser, subklasse, forrigeKlasse);
+        }
+        for (var subklasse : finnAlleJsonSubTypeClasses(klasse)) {
             validerRekursivt(besøkteKlasser, subklasse, forrigeKlasse);
         }
         for (var field : getRelevantFields(klasse)) {
             if (field.getAnnotation(JsonIgnore.class) != null) {
                 continue; // feltet blir hverken serialisert elle deserialisert, unntas fra sjekk
             }
-            if (field.getType().isEnum()) {
-                validerEnum(field);
-                continue; // enum er OK
-            }
             if (erKodeverk(field.getType())) {
                 validerHarValidkodeverkAnnotering(field);
+            } else if (field.getType().isEnum()) {
+                validerEnum(field);
+                continue; // enum er OK
+            } else if (isCollectionOrMapNotProperties(field)) { // Containers håndteres av brukergenerics
+                validerCollectionOrMap(field);
             } else if (getVurderingsalternativer(field) != null) {
                 validerRiktigAnnotert(field); // har konfigurert opp spesifikk validering
             } else if (field.getType().getName().startsWith("java")) {
-                fail("Feltet " + field + " har ikke påkrevde annoteringer. Trenger evt. utvidelse av denne testen for å akseptere denne typen.");
+                throw new AssertionError(
+                    "Feltet " + field + " har ikke påkrevde annoteringer. Trenger evt. utvidelse av denne testen for å akseptere denne typen.");
             } else {
                 validerHarValidAnnotering(field);
                 validerRekursivt(besøkteKlasser, field.getType(), forrigeKlasse);
             }
-            if (brukerGenerics(field)) {
+            if (field.getGenericType() instanceof ParameterizedType parameterizedType) {
                 validerRekursivt(besøkteKlasser, field.getType(), forrigeKlasse);
-                for (var klazz : genericTypes(field)) {
+                for (var klazz : genericTypes(parameterizedType)) {
                     validerRekursivt(besøkteKlasser, klazz, forrigeKlasse);
                 }
             }
@@ -238,11 +214,12 @@ class RestApiInputValideringDtoTest extends RestApiTester {
     }
 
     private static void validerEnum(Field field) {
-        validerRiktigAnnotert(field);
-        var illegal = List.of(field.getAnnotations()).stream().filter(a -> !ALLOWED_ENUM_ANNOTATIONS.contains(a.annotationType()))
-                .toList();
+        if (!erKodeverk(field.getType())) {
+            validerRiktigAnnotert(field);
+        }
+        var illegal = Stream.of(field.getAnnotations()).filter(a -> !ALLOWED_ENUM_ANNOTATIONS.contains(a.annotationType())).toList();
         if (!illegal.isEmpty()) {
-            fail("Ugyldige annotasjoner funnet på [" + field + "]: " + illegal);
+            throw new AssertionError("Ugyldige annotasjoner funnet på [" + field + "]: " + illegal);
         }
 
     }
@@ -253,28 +230,51 @@ class RestApiInputValideringDtoTest extends RestApiTester {
 
     private static void validerHarValidAnnotering(Field field) {
         if (field.getAnnotation(Valid.class) == null) {
-            fail("Feltet " + field + " må ha @Valid-annotering.");
+            throw new AssertionError("Feltet " + field + " må ha @Valid-annotering.");
         }
     }
 
     private static void validerHarValidkodeverkAnnotering(Field field) {
-        if (field.getAnnotation(ValidKodeverk.class) == null && field.getAnnotation(IgnoreKodeverk.class) == null) {
-            fail("Feltet " + field + " er et kodeverk, og må ha @ValidKodeverk-annotering");
+        if (field.getAnnotation(ValidKodeverk.class) == null) {
+            throw new AssertionError("Feltet " + field + " er et kodeverk, og må ha @ValidKodeverk-annotering");
         }
     }
 
-    private static Set<Class<?>> genericTypes(Field field) {
-        Set<Class<?>> klasser = new HashSet<>();
-        var type = (ParameterizedType) field.getGenericType();
-        for (var t : type.getActualTypeArguments()) {
-            klasser.add((Class<?>) t);
-        }
-        return klasser;
+    private static Set<Class<?>> genericTypes(ParameterizedType parameterizedType) {
+        return Arrays.stream(parameterizedType.getActualTypeArguments()).map(a -> (Class<?>) a).collect(Collectors.toSet());
     }
 
-    private static boolean brukerGenerics(Field field) {
-        return field.getGenericType() instanceof ParameterizedType;
+    private static void validerCollectionOrMap(Field field) {
+        // Ikke Valid før Collection/Map - men inne i generics-delen
+        if (field.getAnnotatedType().getAnnotation(Valid.class) != null) {
+            throw new AssertionError("Flytt annotering @Valid inn i List/Set/Collection/Map for feltet " + field + ".");
+        }
+        // Har Validering inne i generics-delen
+        if (field.getAnnotatedType() instanceof AnnotatedParameterizedType annotatedParameterizedType) {
+            var annotert = annotatedParameterizedType.getAnnotatedActualTypeArguments();
+            for (var ann : annotert) {
+                var kreverAnnoteringer = utledKrav(ann.getType());
+                validerRiktigAnnotert(ann, kreverAnnoteringer);
+            }
+            return;
+        }
+        throw new IllegalArgumentException("Feltet " + field + " har ikke påkrevde annoteringer.");
     }
+
+    private static List<List<Class<? extends Annotation>>> utledKrav(Type type) {
+        var kreverAnnoteringer = new ArrayList<List<Class<? extends Annotation>>>();
+        if (erKodeverk(type)) {
+            kreverAnnoteringer.add(List.of(ValidKodeverk.class));
+        } else if (isCollectionOrMap(type)) {
+            kreverAnnoteringer.add(List.of(Size.class));
+        } else if (VALIDERINGSALTERNATIVER.keySet().contains(type)) {
+            kreverAnnoteringer.addAll(VALIDERINGSALTERNATIVER.get(type));
+        } else {
+            kreverAnnoteringer.add(List.of(Valid.class));
+        }
+        return kreverAnnoteringer;
+    }
+
 
     private static Set<Field> getRelevantFields(Class<?> klasse) {
         Set<Field> fields = new LinkedHashSet<>();
@@ -286,40 +286,35 @@ class RestApiInputValideringDtoTest extends RestApiTester {
     }
 
     private static Collection<Field> fjernStaticFields(List<Field> fields) {
-        return fields.stream().filter(f -> !Modifier.isStatic(f.getModifiers())).collect(Collectors.toList());
+        return fields.stream().filter(f -> !Modifier.isStatic(f.getModifiers())).toList();
     }
 
     private static void validerRiktigAnnotert(Field field) {
         var alternativer = getVurderingsalternativer(field);
         for (var alternativ : alternativer) {
-            boolean harAlleAnnoteringerForAlternativet = true;
-            for (var annotering : alternativ) {
-                if (field.getAnnotation(annotering) == null) {
-                    harAlleAnnoteringerForAlternativet = false;
-                }
-            }
-            if (harAlleAnnoteringerForAlternativet) {
-                validerRiktigAnnotertForCollectionsAndMaps(field);
+            if (alternativ.isEmpty() || alternativ.stream().allMatch(field::isAnnotationPresent)) {
                 return;
             }
         }
         throw new IllegalArgumentException("Feltet " + field + " har ikke påkrevde annoteringer: " + alternativer);
     }
 
-    private static void validerRiktigAnnotertForCollectionsAndMaps(Field field) {
-        if (!Properties.class.isAssignableFrom(field.getType())
-                && (Collection.class.isAssignableFrom(field.getType()) || Map.class.isAssignableFrom(field.getType()))) {
-            var annType = (AnnotatedParameterizedType) field.getAnnotatedType();
-            var annotatedTypes = annType.getAnnotatedActualTypeArguments();
-            for (var at : List.of(annotatedTypes)) {
-                if (erKodeverk(at.getType())) {
-                    if (!at.isAnnotationPresent(ValidKodeverk.class) && !at.isAnnotationPresent(IgnoreKodeverk.class)) {
-                        throw new IllegalArgumentException(
-                                "Feltet " + field + " har ikke påkrevd annotering for kodeverk: @" + ValidKodeverk.class.getSimpleName());
-                    }
-                }
+    private static void validerRiktigAnnotert(AnnotatedType ann, List<List<Class<? extends Annotation>>> alternativer) {
+        for (var alternativ : alternativer) {
+            if (alternativ.isEmpty() || alternativ.stream().allMatch(ann::isAnnotationPresent)) {
+                return;
             }
         }
+        throw new IllegalArgumentException("Type " + ann + " har ikke påkrevde annoteringer: " + alternativer);
     }
+
+    private static boolean isCollectionOrMapNotProperties(Field field) {
+        return Collection.class.isAssignableFrom(field.getType()) || Map.class.isAssignableFrom(field.getType()) && !Properties.class.isAssignableFrom(field.getType());
+    }
+
+    private static boolean isCollectionOrMap(Type type) {
+        return Collection.class.isAssignableFrom(type.getClass()) || Map.class.isAssignableFrom(type.getClass());
+    }
+
 
 }
